// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<APIKey /> should render when [state.changed=true] 1`] = `
<Box__SpacedBox
  key="123abc"
  onClick={[Function]}
>
  <Key__APIKeyHeader>
    <strong>
      tester
    </strong>
    <Attribution
      time="2018-02-14T17:12:00.000000Z"
    />
    <Key__APIKeyPermissionCount>
      1
       permission
    </Key__APIKeyPermissionCount>
    <Key__APIKeyCloseContainer />
  </Key__APIKeyHeader>
</Box__SpacedBox>
`;

exports[`<APIKey /> should render when collapsed 1`] = `
<Box__SpacedBox
  key="123abc"
  onClick={[Function]}
>
  <Key__APIKeyHeader>
    <strong>
      tester
    </strong>
    <Attribution
      time="2018-02-14T17:12:00.000000Z"
    />
    <Key__APIKeyPermissionCount>
      1
       permission
    </Key__APIKeyPermissionCount>
    <Key__APIKeyCloseContainer />
  </Key__APIKeyHeader>
</Box__SpacedBox>
`;

exports[`<APIKey /> should render when expanded 1`] = `
<Box__SpacedBox
  key="123abc"
  onClick={null}
>
  <Key__APIKeyHeader>
    <strong>
      tester
    </strong>
    <Attribution
      time="2018-02-14T17:12:00.000000Z"
    />
    <Key__APIKeyPermissionCount>
      1
       permission
    </Key__APIKeyPermissionCount>
    <Key__APIKeyCloseContainer>
      <Icon
        faStyle="fas"
        fixedWidth={false}
        name="times"
        onClick={[Function]}
      />
    </Key__APIKeyCloseContainer>
  </Key__APIKeyHeader>
  <div>
    <Key__APIKeyPermissions
      keyPermissions={
        Object {
          "bar": true,
          "baz": false,
          "foo": false,
        }
      }
      onChange={[Function]}
    />
    <ButtonToolbar>
      <Button
        color="red"
        disabled={false}
        icon="trash"
        onClick={[Function]}
        tipPlacement="top"
        type="button"
      >
        Remove
      </Button>
      <Button
        color="blue"
        disabled={true}
        icon="save"
        onClick={[Function]}
        tipPlacement="top"
        type="button"
      >
        Update
      </Button>
    </ButtonToolbar>
  </div>
</Box__SpacedBox>
`;
